# clic

./: .gitignore  CMakeLists.txt  README.md  TODO.md  howto.md  pyproject.toml
clic/: __init__.py  api.py  basis_1p.py  basis_Np.py  basis_transforms.py  bath_transform.py  cat.txt  config_models.py  create_model_from_hyb.py  dmft_step.py  fitdelta.py  gfs.py  hamiltonians.py  highlevel.txt  io_utils.py  mf.py  ops.py  plotting.py  postprocessing.py  results.py  sci.py  script_cat.txt  sparsity_score.py  symmetries.py  totoinit.py  workflow.py
clic/basis/: basis_1p.py  basis_Np.py
clic/cpp_src/: bindings.cpp  ci_core.cpp  ci_core.h  hamiltonian.cpp
clic/green/: gfs.py  green_api.py  green_sym.py  green_utils.py  self_energy.py
clic/hybfit/: __init__.py  hybfit.py  hybfit_cost.py  hybfit_poles.py  process_hyb.py  utils.py
clic/io_clic/: io_utils.py
clic/lanczos/: block_lanczos.py  scalar_lanczos.py
clic/mf/: __init__.py  mf.py  mf_0.py
clic/model/: bath_transform.py  config_models.py  create_generic_aim.py  create_model_from_hyb.py  double_chains.py  hamiltonians.py  model_api.py  model_utils.py
clic/ops/: ops.py
clic/results/: postprocessing.py  results.py
clic/scripts/: cli.py  gf_cli.py  helpers.py  run.py  scripts_cat.txt  thermal_cli.py
clic/solve/: davidson.py  diagh.py  fci.py  sci.py  solver_api.py
clic/solve/sci_dev/: sci.0.py  sci_dev.py
clic/symmetries/: symmetries.py
config/: gf.toml  model.toml  solver.toml
cpp_src/: applyH.cpp  applyH.h  bindings.cpp  ci_core.cpp  ci_core.h  determinants.cpp  hamiltonian.h
docs/source/: api.rst  conf.py  index.rst  usage.rst
interface_clic_rspt/: Makefile
interface_clic_rspt/python/: dummy_python_solver.py  read_from_rspt.py
python_tests/: run_test.sh  test_green_hubbard_dimer.py  test_green_random.py  test_h2o_631g.py  test_h2o_sto3g.py  test_hubbard_dimer.py  test_impurity.py  test_impurity_fixed.py  test_kernel.py  test_matrix_elements.py
python_tests_old/: test_green_hubbard_dimer.py  test_h2o_631g.py  test_hubbard_dimer.py  test_impurity_fixed.py  test_operators_2.py
rspt_interface/interface_clic_rspt/python/: dummy_python_solver.py  dummy_python_solver_0.py
rspt_interface/interface_clic_rspt/src/: c_to_python_bridge.c
rspt_interface/interface_clic_rspt/working_dummy_c/: Makefile
rspt_interface/interface_clic_rspt/working_dummy_c/src/: dummy_solver.c
tmp/: 1pbasis_imp.py  applyH_dev.py  cipsi.py  multiorbimp.py  multiorbimp_comp.py  natorb.py  sign.py  sparsity.py  symtest.py  test_apply_H.py  timeprop.py  toto.py
tmp/dump/: A_w_thermal  toto
tmp/nbconv/metal/Gamma0_0.01/imp1/: check_conv_2.py  multiorbimp_comp.py  out19  out29  out39  out49  out9
tmp/nbconv/metal/Gamma0_0.01/imp1/dump/: A_19  A_29  A_39  A_49  A_9
tmp/nbconv/metal/Gamma0_0.01/imp2/: check_conv_2.py  multiorbimp_comp.py  out19  out23  out24  out9  out_5
tmp/nbconv/metal/Gamma0_0.01/imp2/dump/: A_24  A_29  A_5  A_9
tmp/nbconv/metal/Gamma0_0.1/imp1/: check_conv_2.py  multiorbimp_comp.py  out19  out29  out39  out9
tmp/nbconv/metal/Gamma0_0.1/imp1/dump/: A_19  A_29  A_39  A_49  A_9  A_w_thermal
tmp/nbconv/metal/Gamma0_0.1/imp2/: check_conv.py  check_conv_2.py  multiorbimp_comp.py  out19_nodblch  out29  out5
tmp/nbconv/metal/Gamma0_0.1/imp2/dump/: A_19  A_23
tmp/nbconv/mott/imp1/: check_conv_2.py  multiorbimp_comp.py  out18  out28  out38  out48  out8
tmp/nbconv/mott/imp1/dump/: A_18  A_28  A_38  A_48  A_8
tmp/nbconv/mott/imp2/: check_conv_2.py  multiorbimp_comp.py  out18  out18_nodblch  out28  out48  out8
tmp/nbconv/mott/imp2/dump/: A_18  A_28  A_8
tmp/nbconv/mott/imp5/: multiorbimp_comp.py
tmp/nbconv/mott/imp5/dump/: A_1  A_3
tmp/time_prop/: benchmark_ed_pert.py  lanczos_pert.py  lanczos_pert_sci.py  lanczos_pert_sci_clean.py  pump_probe_ed.py  utils.py
