[build-system]
requires = ["scikit-build-core>=0.7.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "clic"
version = "0.1.0"
description = "A high-performance Configuration Interaction solver with C++ backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Basile Herzog", email = "basile.herzog@gmail.com" }]

dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "tomli; python_version < '3.11'",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
clic-run = "clic.scripts.cli:main"

[tool.scikit-build]
# This tells scikit-build where your CMakeLists.txt is relative to this file.
cmake.source-dir = "."
# This tells scikit-build where to put the compiled .so file.
# It will place clic_clib.so inside the clic/ directory.
wheel.packages = ["clic"]