[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clic"
version = "0.1.0"
description = "A high-performance Configuration Interaction solver with C++ backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Basile Herzog", email = "basile.herzog@gmail.com" }]

# MOVED THIS SECTION UP
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "tomli; python_version < '3.11'",
    "clic-clib",
]

# MOVED THIS SECTION UP
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++", # You can probably remove this line now
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
clic-run = "clic.scripts.run:main"

# This table now comes AFTER all the [project] keys are defined.
[tool.setuptools.packages.find]
where = ["."]
include = ["clic*"]